<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.wilsoncys.compi1.java</groupId>
    <artifactId>JavaCraft</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <exec.mainClass>com.wilsoncys.compi1.java.Main</exec.mainClass>
    </properties>
    
    
    <name>CompiladorMultilenguaje_prF_OLC2</name>


    <dependencies>

<!--cup-->
            <!-- https://mvnrepository.com/artifact/de.jflex/cup_runtime -->
        <dependency>
            <groupId>de.jflex</groupId>
            <artifactId>cup_runtime</artifactId>
            <version>11b-20160615</version>
        </dependency>

        <!--temas para la interfaz de intelliji-->
        <dependency>            
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.4.1</version>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-intellij-themes</artifactId>
            <version>3.4.1</version>
        </dependency>

<!--dependencia para herramientas de escape--> 
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.1</version>
            <type>jar</type>
        </dependency>
        
            
     <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>
    
        
        
        
        
        
    </dependencies>
    

    
    
        <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    
                    <archive>
                        <manifest>
                            <mainClass>com.wilsoncys.compi1.java.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            
            
        </plugins>
    </build>
    
    

    

    
</project>